--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,11 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 1rem;
+    max-height: 200px; /* Add max-height */
   }
   
   .card {
     position: relative;
-    perspective: 1000px;
     height: 200px;
     width: 200px;
     cursor: pointer;
@@ -27,6 +27,9 @@
   }
   
   .card div {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,10 +43,12 @@
   
   .card .front {
     background-color: #3f51b5;
+    z-index: 2;
   }
   
   .card .back {
     background-color: #f50057;
     transform: rotateY(180deg);
+    z-index: 1;
   }
   
